fix: Change css so the arrows appear in the same place without overlapping the space of the card (#1601)
* fix: Change css so the arrows appear in the same place without overlapping the space of the card

* fix: Same fix for the horizontal aspect

--- a/webapp/src/components/HomePage/Slideshow/Slideshow.css
+++ b/webapp/src/components/HomePage/Slideshow/Slideshow.css
@@ -111,9 +111,7 @@
   display: flex;
   justify-content: center;
   position: absolute;
-  top: 0;
-  width: 80px;
-  height: 100%;
+  width: fit-content;
   z-index: 5;
 }
 
